refactor(property): migrate to v2 properties